deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: excellence-nettoyage-api #application name
    version: v0.0.7
  name: excellence-nettoyage-api #pod's name
  namespace: default
spec:
  replicas: 1 #number of pods
  minReadySeconds: 45 #give thc container to wait 45 seconds to get ready
  selector:
    matchLabels:
      app: excellence-nettoyage-api
      version: v0.0.7
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: excellence-nettoyage-api
        version: v0.0.7
    spec:
      containers:
        - image: edvilla/excellence-api:v0.0.7
          imagePullPolicy: Always
          name: excellence-nettoyage-api
          livenessProbe:
            httpGet:
              port: 8080
              path: /api/actuator/health
            initialDelaySeconds: 15
            periodSeconds: 30
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: excellence-nettoyage-api
  name: excellence-nettoyage-api
  namespace: default
spec:
  ports:
    - port: 8000 #external port
      protocol: TCP
      targetPort: 8080 #api port
  selector:
    app: excellence-nettoyage-api
  sessionAffinity: None
  type: NodePort
